# paperbox

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  entrypoint.sh  gen_themes.py  readme.md
backend/: Cargo.toml  gen_themes.py
backend/migrations/2020-11-07-002801_create_themes/: down.sql  up.sql
backend/migrations/2020-11-07-002821_create_wallpapers/: down.sql
backend/src/: db.rs  filters.rs  handlers.rs  main.rs  schema.rs
backend/src/models/: mod.rs  theme.rs  wallpaper.rs
frontend/: angular.json  main.ts  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts  paperbox.service.ts  theme.ts  themes.service.ts  wallpaper.service.ts  wallpaper.spec.ts  wallpaper.ts  wallpapers.service.spec.ts  wallpapers.service.ts
frontend/src/app/models/: theme.model.ts  wallpaper.model.ts
frontend/src/app/wallpaper/: wallpaper.component.html  wallpaper.component.scss  wallpaper.component.ts
frontend/src/app/wallpaper/editor-preview/: editor-preview.component.html  editor-preview.component.scss  editor-preview.component.ts
frontend/src/app/wallpaper/theme-selector/: theme-selector.component.html  theme-selector.component.scss  (+1 more)
frontend/src/app/wallpapers/: wallpapers.component.html  wallpapers.component.scss  wallpapers.component.ts
migrations/2020-11-07-002801_create_themes/: up.sql
migrations/2020-11-07-002821_create_wallpapers/: up.sql
src/: db.rs  filters.rs  handlers.rs  main.rs  schema.rs  server.rs
src/models/: mod.rs  theme.rs  wallpaper.rs
(+14 files in other folders)
